# deepagents-project

./: .env.example  main.py  pyproject.toml
backend/: agent.py  db.py  main.py  runs.db
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/runs/[id]/: page.tsx
frontend/components/: ApproveReject.tsx  DiffViewer.tsx  TestResults.tsx
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
